Added POST and GET interactions
